# voice-loop

./: .gitignore  DEVELOPMENT.md  README.md  com.voiceloop.mcp.plist  entitlements.plist  mcp_server.py  pyproject.toml  voice-loop.code-workspace  voice_loop_mac.py  voice_pipeline.py
.github/workflows/: build.yml
backends/: __init__.py  local.py  passthrough.py
voiceloop/: __init__.py  __main__.py  _bootstrap.py  app.py  gui.py
voiceloop_cli/: __init__.py  __main__.py
