[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-loop"
version = "0.1.0"
description = "A minimal on-device voice agent loop. Mac M4 / Apple Silicon."
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.5",
    "numpy>=2.1",
    "silero-vad>=5.1",
    "onnxruntime>=1.17",
    "mlx-vlm>=0.4.3",
    "moonshine-voice>=0.0.40,<0.0.55",  # 0.0.55 has no macOS arm64 wheel
    "livekit>=1.1.5",
    "transformers>=4.40",  # used by smart-turn (default on)
    "torch>=2.0",          # used by silero-vad (pulled in transitively but declared explicitly)
    "kokoro-onnx>=0.4",    # TTS (default on)
    "soundfile>=0.12",     # TTS audio I/O
    "fastmcp>=3.0",        # MCP server framework
    "certifi>=2024.0",     # CA certs for Briefcase-bundled Python (no system store)
    "typer>=0.9",          # CLI framework (Briefcase console app)
]

[project.scripts]
voice-loop = "voice_loop_mac:main"
voice-loop-mcp = "mcp_server:run_mcp_server"

[tool.setuptools.packages.find]
include = ["voiceloop*", "backends*"]

# ---------------------------------------------------------------------------
# Briefcase (macOS .app packaging)
# ---------------------------------------------------------------------------
[tool.briefcase]
project_name = "VoiceLoop"
bundle = "com.voiceloop"
version = "0.1.0"
url = "https://github.com/jimwhite/voice-loop"
license.file = "LICENSE"
author = "Voice Loop Contributors"

[tool.briefcase.app.voiceloop]
formal_name = "Voice Loop"
description = "On-device voice interface for coding agents"
console_app = true
sources = ["voiceloop", "voice_loop_mac.py", "voice_pipeline.py", "mcp_server.py", "backends"]
requires = [
    "sounddevice>=0.5",
    "numpy>=2.1",
    "silero-vad>=5.1",
    "onnxruntime>=1.17",
    "moonshine-voice>=0.0.40,<0.0.55",
    "livekit>=1.1.5",
    "transformers>=4.40",
    "torch>=2.0",
    "kokoro-onnx>=0.4",
    "soundfile>=0.12",
    "fastmcp>=3.0",
    "certifi>=2024.0",
    "typer>=0.9",
]

[tool.briefcase.app.voiceloop.macOS]
min_os_version = "15.0"      # Sequoia+ — moonshine-voice wheels require macOS 15
universal_build = false       # ARM-only — mlx/mlx-metal have no x86_64 wheels
requires = [
    "mlx-vlm>=0.4.3",        # MLX needs Apple Silicon — macOS only
]
